charts/coco-supported/kbs-access-curl/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kbs-access-curl
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: kbs-access-curl
  sessionAffinity: None
  type: ClusterIP
