charts/coco-supported/kbs-access-curl/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kbs-access-curl
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: kbs-access-curl
    weight: 100
  wildcardPolicy: None
